[package]
name = "bucket"
version = "0.1.0"
authors = ["PierreStephaneVoltaire <psvoltaire96@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3.1"
rusoto_core = "0.44.0"
rusoto_sqs = "0.44.0"
rusoto_s3 = "0.44.0"
chrono = { version = "0.4", features = ["serde"] }